[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://back.png" type="Texture" id=2]
[ext_resource path="res://White bg settings.png" type="Texture" id=3]
[ext_resource path="res://Crosshair PNGS/CrosshairStandard.png" type="Texture" id=4]
[ext_resource path="res://Platinum Beat BTN Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Crosshair PNGS/CrosshairDot.png" type="Texture" id=6]
[ext_resource path="res://Crosshair PNGS/CrosshairDotCyan.png" type="Texture" id=7]
[ext_resource path="res://Crosshair PNGS/CrosshairDotWhite.png" type="Texture" id=8]
[ext_resource path="res://Crosshair PNGS/BlackBG.png" type="Texture" id=9]
[ext_resource path="res://Crosshair PNGS/CrosshairStandardWhite.png" type="Texture" id=10]
[ext_resource path="res://Crosshair PNGS/CrosshairStandardCyan.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 42
extra_spacing_bottom = -10
extra_spacing_char = 2
extra_spacing_space = 2
font_data = ExtResource( 5 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 78.0, 302.0, 190.0, 490.0, 385.0 ],
"_edit_lock_": true,
"_edit_vertical_guides_": [ 139.0, 390.0, 640.0, 1013.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0.839216, 0.25098, 0.133333, 1 )
anchor_left = -0.001
anchor_top = -0.006
anchor_right = -0.001
anchor_bottom = -0.006
margin_left = 1.28
margin_top = 4.32
margin_right = 1281.28
margin_bottom = 724.32
color = Color( 0.745098, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="WhiteBgSettings" type="Sprite" parent="ColorRect"]
position = Vector2( 641.238, 327.755 )
scale = Vector2( 1.62987, 1.50118 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Sprite" parent="."]
position = Vector2( 1205, 696 )
scale = Vector2( 0.514999, 0.514999 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Backbutton" type="Button" parent="Back"]
modulate = Color( 0, 0, 0, 0 )
self_modulate = Color( 0, 0, 0, 0 )
margin_left = -130.097
margin_top = -58.2528
margin_right = 134.903
margin_bottom = 42.7472
__meta__ = {
"_edit_lock_": true
}

[node name="ImgsANDText" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="DOT" type="Label" parent="ImgsANDText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 290.0
margin_top = 35.0
margin_right = 1011.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "DOT
"
align = 1

[node name="BlackBg" type="Sprite" parent="ImgsANDText/DOT"]
position = Vector2( 110, 155 )
texture = ExtResource( 9 )

[node name="BlackBg3" type="Sprite" parent="ImgsANDText/DOT"]
position = Vector2( 610, 155 )
texture = ExtResource( 9 )

[node name="BlackBg2" type="Sprite" parent="ImgsANDText/DOT"]
position = Vector2( 360, 155 )
texture = ExtResource( 9 )

[node name="STANDARD" type="Label" parent="ImgsANDText"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 290.0
margin_top = 321.0
margin_right = 1011.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "STANDARD
"
align = 1

[node name="BlackBg" type="Sprite" parent="ImgsANDText/STANDARD"]
position = Vector2( 110, 155 )
texture = ExtResource( 9 )

[node name="BlackBg3" type="Sprite" parent="ImgsANDText/STANDARD"]
position = Vector2( 610, 155 )
texture = ExtResource( 9 )

[node name="BlackBg2" type="Sprite" parent="ImgsANDText/STANDARD"]
position = Vector2( 360, 155 )
texture = ExtResource( 9 )

[node name="CROSSHAIRIMG" type="Control" parent="ImgsANDText"]
margin_left = 399.0
margin_top = 190.0
margin_right = 439.0
margin_bottom = 230.0

[node name="CrosshairDot" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 1, 0 )
texture = ExtResource( 6 )

[node name="CrosshairDotWhite" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 501, 0 )
texture = ExtResource( 8 )

[node name="CrosshairDotCyan" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 251, 0 )
texture = ExtResource( 7 )

[node name="CrosshairStandard" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 0, 281 )
texture = ExtResource( 4 )

[node name="CrosshairStandardCyan" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 251, 281 )
texture = ExtResource( 11 )

[node name="CrosshairStandardWhite" type="Sprite" parent="ImgsANDText/CROSSHAIRIMG"]
position = Vector2( 501, 281 )
texture = ExtResource( 10 )

[node name="CUSTOM CROSSHAIRS" type="Label" parent="ImgsANDText"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 766.0
margin_top = 48.0
margin_right = 1271.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 1 )
text = "DOT + STANDARD
"
align = 1

[node name="BlackBg4" type="Sprite" parent="ImgsANDText/CUSTOM CROSSHAIRS"]
position = Vector2( 252, 428 )
texture = ExtResource( 9 )

[node name="BlackBg" type="Sprite" parent="ImgsANDText/CUSTOM CROSSHAIRS"]
position = Vector2( 125, 179 )
texture = ExtResource( 9 )

[node name="BlackBg2" type="Sprite" parent="ImgsANDText/CUSTOM CROSSHAIRS"]
position = Vector2( 369, 179 )
texture = ExtResource( 9 )

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 434.0
margin_top = 261.0
margin_right = 510.0
margin_bottom = 301.0

[node name="CheckButton2" type="CheckButton" parent="."]
margin_left = 684.0
margin_top = 261.0
margin_right = 760.0
margin_bottom = 301.0

[node name="CheckButton3" type="CheckButton" parent="."]
margin_left = 934.0
margin_top = 261.0
margin_right = 1010.0
margin_bottom = 301.0

[node name="CheckButton4" type="CheckButton" parent="."]
margin_left = 434.0
margin_top = 546.0
margin_right = 510.0
margin_bottom = 586.0

[node name="CheckButton5" type="CheckButton" parent="."]
margin_left = 684.0
margin_top = 546.0
margin_right = 760.0
margin_bottom = 586.0

[node name="CheckButton6" type="CheckButton" parent="."]
margin_left = 934.0
margin_top = 546.0
margin_right = 1010.0
margin_bottom = 586.0

[connection signal="button_up" from="Back/Backbutton" to="." method="_on_Backbutton_button_up"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="CheckButton2" to="." method="_on_CheckButton2_toggled"]
[connection signal="toggled" from="CheckButton3" to="." method="_on_CheckButton3_toggled"]
[connection signal="toggled" from="CheckButton4" to="." method="_on_CheckButton4_toggled"]
[connection signal="toggled" from="CheckButton5" to="." method="_on_CheckButton5_toggled"]
[connection signal="toggled" from="CheckButton6" to="." method="_on_CheckButton6_toggled"]
